--- a/code/.vscode/launch.json
+++ b/code/.vscode/launch.json
@@ -5,8 +5,8 @@
             "name": "Debug NachOS",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/home/yangshuo/os/Nachos-3.4-SDU (for lecture)/code/lab7-8/nachos",  // 替换为你的 nachos 可执行文件路径
-            "args": ["-f", ""],               // 运行参数（如要测试的程序）
+            "program": "/code/lab7-8/nachos",
+            "args": ["-f", ""],             
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
@@ -19,7 +19,7 @@
                     "ignoreFailures": true
                 }
             ],
-            //"preLaunchTask": "build-nachos"  // 可选：调试前自动编译（需配置 tasks.json）
+            //"preLaunchTask": "build-nachos"  
         }
     ]
 }
